--- a/pom.xml.erb
+++ b/pom.xml.erb
@@ -1,8 +1,11 @@
+<% last_commit_hash = `git log --pretty=format:'%h' -n 1` %>
+<% version = "2.0-beta-7-#{last_commit_hash}-paperless" %>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>biz.neustar</groupId>
     <artifactId>browsermob-proxy</artifactId>
-    <version>2.0-beta-7-2db320e-paperless</version>
+    <version><%= version %></version>
     <name>BrowserMob Proxy</name>
     <description>A programmatic HTTP/S designed for performance and functional testing</description>
     <url>http://opensource.webmetrics.com/browsermob-proxy</url>
